--- a/OhMyFood/sass/base/_typography.scss
+++ b/OhMyFood/sass/base/_typography.scss
@@ -15,6 +15,10 @@
   src: url('./fonts/dancing-script-ot/DancingScript-Regular.otf');
 }
 @font-face {
+  font-family: 'satisfy';
+  src: url('./fonts/satisfy/Satisfy-Regular.ttf');
+}
+@font-face {
   font-family: 'caveat';
   src: url('./fonts/caveat/caveat-regular.ttf');
 }
