--- a/OhMyFood/sass/utils/_mixins.scss
+++ b/OhMyFood/sass/utils/_mixins.scss
@@ -118,4 +118,20 @@
       font-size: map_get($menu, font-size-h4);
     }
   }
+  @media only screen and (max-width: $break-small) {
+    &__header {
+      font-size: x-large;
+    }
+    & li {
+      justify-content: center;
+      font-size: 18px;
+      margin-bottom: 15px;
+      & span {
+      }
+      & strong {
+        justify-self: left;
+        margin-left: 10px;
+      }
+    }
+  }
 }
